<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffff0"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/TextViewMarginBottom"
        android:ellipsize="start"
        android:gravity="end"
        android:padding="@dimen/TextViewPadding"
        android:singleLine="true"
        android:text=""
        android:textSize="@dimen/TextViewTextSize"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fffff0"
        android:orientation="vertical">

        <LinearLayout style="@style/normalHorizontalLayout">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonC"
                style="@style/normalButton"
                android:text="@string/button_1"
                android:textColor="#ff7433"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonChangeSign"
                style="@style/normalButton"
                android:text="@string/button_2"
                android:textColor="#ff7433"
                android:textSize="20sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLefB"
                style="@style/normalButton"
                android:text="@string/button_20"
                android:textColor="#ff7433"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRightB"
                style="@style/normalButton"
                android:text="@string/button_21"
                android:textColor="#ff7433"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonBackspace"
                style="@style/normalButton"
                android:text="@string/button_3"
                android:textColor="#ff7433"
                android:textSize="20sp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDiv"
                style="@style/normalButton"
                android:text="@string/button_4"
                android:textColor="#ff7433"
                android:textSize="20sp">


            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>

        <LinearLayout style="@style/normalHorizontalLayout">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSin"
                style="@style/normalButton"
                android:text="@string/button_22"
                android:textColor="#ff7433"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonCos"
                style="@style/normalButton"
                android:text="@string/button_23"
                android:textColor="#ff7433"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonTan"
                style="@style/normalButton"
                android:text="@string/button_24"
                android:textColor="#ff7433"
                android:textSize="20sp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonXY"
                style="@style/normalButton"
                android:text="@string/button_25"
                android:textColor="#ff7433"
                android:textSize="20sp">


            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>
        <LinearLayout style="@style/normalHorizontalLayout">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLg"
                style="@style/normalButton"
                android:text="@string/button_26"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLn"
                style="@style/normalButton"
                android:text="@string/button_27"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSqrt"
                style="@style/normalButton"
                android:text="@string/button_28"
                android:textColor="@color/black"
                android:textSize="20sp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonX2"
                style="@style/normalButton"
                android:text="@string/button_29"
                android:textColor="#ff7433"
                android:textSize="20sp">


            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>
        <LinearLayout style="@style/normalHorizontalLayout">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSeven"
                style="@style/normalButton"
                android:text="@string/button_5"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonEight"
                style="@style/normalButton"
                android:text="@string/button_6"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNine"
                style="@style/normalButton"
                android:text="@string/button_7"
                android:textColor="@color/black"
                android:textSize="20sp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonMul"
                style="@style/normalButton"
                android:text="@string/button_8"
                android:textColor="#ff7433"
                android:textSize="20sp">


            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>
        <LinearLayout style="@style/normalHorizontalLayout">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonFour"
                style="@style/normalButton"
                android:text="@string/button_9"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonFive"
                style="@style/normalButton"
                android:text="@string/button_10"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSix"
                style="@style/normalButton"
                android:text="@string/button_11"
                android:textColor="@color/black"
                android:textSize="20sp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSub"
                style="@style/normalButton"
                android:text="@string/button_12"
                android:textColor="#ff7433"
                android:textSize="20sp">


            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>

        <LinearLayout style="@style/normalHorizontalLayout">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonOne"
                style="@style/normalButton"
                android:text="@string/button_13"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonTwo"
                style="@style/normalButton"
                android:text="@string/button_14"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonThree"
                style="@style/normalButton"
                android:text="@string/button_15"
                android:textColor="@color/black"
                android:textSize="20sp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAdd"
                style="@style/normalButton"
                android:text="@string/button_16"
                android:textColor="#ff7433"
                android:textSize="20sp">


            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>

        <LinearLayout style="@style/normalHorizontalLayout">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonZero"
                style="@style/normalButton"
                android:text="@string/button_17"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDot"
                style="@style/normalButton"
                android:text="@string/button_18"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonEqu"
                style="@style/normalButton"
                android:layout_weight="0.6667"
                android:text="@string/button_19"
                android:textColor="#ff7433"
                android:textSize="20sp">


            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>